fixed subheader positioning on mobile view

--- a/CSS/sections.css
+++ b/CSS/sections.css
@@ -29,6 +29,7 @@ Key concepts to stick to:
     }
     h2 {
         font-size: 2rem;
+        text-align: center;
     }
 }
 /* Card List */
